--- a/HTML/recipes/index.html
+++ b/HTML/recipes/index.html
@@ -7,7 +7,7 @@
     <title>Tasty recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>Great Recipes</h1>
 
     <div>
       <h2>Recipes</h2>
